--- a/app/views/partials/_nav_coordinator.html.erb
+++ b/app/views/partials/_nav_coordinator.html.erb
@@ -30,8 +30,7 @@
 
 	<div id="search">
 		<%= form_tag('/home/search') do %>
-	  	<%= text_field_tag 'query' %>
-	  	<%= submit_tag 'Search' %>
+	  	<%= text_field_tag 'query' %> <%= submit_tag 'Search' %>
 		<% end %>
 	</div>
 
