Paginating browse results

--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -24,6 +24,8 @@
 		<div class="browse_section">
 			<p class="search_count"><%= pluralize(@costumes.size, 'costume') %> matching term '<em><%= @query %>'</em></p>
 			<%= render :partial => "partials/display_items_table", :locals => {:items  => @costumes} %>
+			<!-- <p class="supertiny">&nbsp;</p> -->
+			<%= paginate @costumes %>
 		</div>
 		<% end %>
 	
@@ -33,6 +35,8 @@
 		<div class="browse_section">
 			<p class="search_count"><%= pluralize(@props.size, 'prop') %> matching term '<em><%= @query %>'</em></p>
 			<%= render :partial => "partials/display_items_table", :locals => {:items  => @props} %>
+			<!-- <p class="supertiny">&nbsp;</p> -->
+			<%= paginate @props %>
 		</div>
 		<% end %>
 	
@@ -41,6 +45,8 @@
 		<div class="browse_section">
 			<p class="search_count"><%= pluralize(@staging.size, 'staging') %> matching term '<em><%= @query %>'</em></p>
 			<%= render :partial => "partials/display_items_table", :locals => {:items  => @staging} %>
+			<!-- <p class="supertiny">&nbsp;</p> -->
+			<%= paginate @staging %>
 		</div>
 		<% end %>
 	
