--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,16 +8,22 @@
 	<h6><%= link_to(image_tag("forms/search_costumes.png"),"#") %></h6>
 	<div class="browse_section">
 		<%= render :partial => "partials/display_items_table", :locals => {:items  => @costumes} %>
+		<!-- <p class="supertiny">&nbsp;</p> -->
+		<%= paginate @costumes %>
 	</div>
 	
 	<h6><%= link_to(image_tag("forms/search_props.png"),"#") %></h6>
 	<div class="browse_section">
 		<%= render :partial => "partials/display_items_table", :locals => {:items  => @props} %>
+		<!-- <p class="supertiny">&nbsp;</p> -->
+		<%= paginate @props %>
 	</div>
 	
 	<h6><%= link_to(image_tag("forms/search_staging.png"),"#") %></h6>
 	<div class="browse_section">
 		<%= render :partial => "partials/display_items_table", :locals => {:items  => @staging} %>
+		<!-- <p class="supertiny">&nbsp;</p> -->
+		<%= paginate @staging %>
 	</div>
 	
 </div>
