--- a/app/views/partials/_display_items_table.html.erb
+++ b/app/views/partials/_display_items_table.html.erb
@@ -7,7 +7,9 @@
 			<% (0..(num_per_rows-1)).each do |c| %>
 				<% unless items[(r*num_per_rows)+c].nil? %>
 					<td align="center" width="90" valign="top">
-						<% unless items[(r*num_per_rows)+c].photos.empty? || items[(r*num_per_rows)+c].photos.nil? %>
+						<% if items[(r*num_per_rows)+c].photos.empty? || items[(r*num_per_rows)+c].photos.nil? %>
+							<%= link_to(image_tag('missingimage.jgp'), item_path(items[(r*num_per_rows)+c])) %>
+						<% else %>
 							<%= link_to(image_tag(items[(r*num_per_rows)+c].photos.first.image_url(:thumb)), item_path(items[(r*num_per_rows)+c])) %> <br />
 						<% end %>
 						<%= link_to(items[(r*num_per_rows)+c].name, item_path(items[(r*num_per_rows)+c])) %>
