--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -17,7 +17,9 @@
 	<!-- Continuing top left cell -->
 	<tr>
 		<td valign="top" width="200" class="show">
-			<% unless @photos.empty? || @photos.nil? %> 
+			<% if @photos.empty? || @photos.nil? %> 
+				<%= image_tag 'missingimage.jpg' %>
+			<% else %>
 				<% if @photos.size == 1 %>
 					<%= image_tag @photos.first.image_url %>
 				<% else %>
