Making style changes

--- a/app/views/user/index.html.erb
+++ b/app/views/user/index.html.erb
@@ -2,7 +2,7 @@
 	<div id="add_widget"><%= link_to '+ Add a New User', new_user_path %></div>
 <% end %>
 
-<h1>Current users</h1>
+<h1>Manage Accounts</h1>
 <table class="datagrid">
   <thead class="datagrid">
 		<th width="54" align="left">&nbsp;</th>
