--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -1,5 +1,1 @@
-<% if current_page.last? %>
-  <span class="csb" style="background-position:-96px 0;width:45px"></span>
-<% else %>
-  <%= link_to raw('<span class="csb ch" style="background-position:-96px 0;width:71px"></span><span style="display:block;margin-left:53px;text-decoration:underline">Next</span>'), url, :class => 'pn knavi', :id => 'pnnext', :style => 'text-align:left;text-decoration:none', :remote => remote %>
-<% end %>
+<%= link_to_unless current_page.last?, raw('Older &raquo;'), url, :remote => remote do |name| -%><span class="disabled"><%= name %></span><% end -%>
