--- a/public/stylesheets/uif_styles.css
+++ b/public/stylesheets/uif_styles.css
@@ -395,6 +395,7 @@ background: none;
 
 /********** SHOW PAGES ********/
 .show {
+	
 }
 
 #item_slides {
@@ -410,7 +411,7 @@ background: none;
 
 
 .show img {
-	float: left;
+	/*float: left;*/
 	margin: 5px 15px 15px 0px;
 }
 
