Fixing issue with item#show

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -70,7 +70,7 @@
 		<td valign="top" class="show" colspan="2">
 			<% unless current_user.is_partner? %>
 				<%= image_tag "forms/show_items_finding_it.png" %>
-				<p class="supertiny">&nbsp;</p>
+				<!-- <p class="supertiny">&nbsp;</p> -->
 				<p>
 				  <b>Status at UIF:</b>
 				  <%= @item.status %>
