Removing the remote=>true from subcategories links

--- a/app/views/partials/_display_subcategories.html.erb
+++ b/app/views/partials/_display_subcategories.html.erb
@@ -1,5 +1,5 @@
 <% for subcategory in subcategories %>
-	<p><%= link_to "#{subcategory[1]}", items_path(subcategory[0]), :remote => true %></p>
+	<p><%= link_to "#{subcategory[1]}", items_path(subcategory[0]) %></p>
 <% end %>
 
 
