Back to working, non-ajax method

--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -17,7 +17,7 @@
 	</h3>
 	<p class="supertiny">&nbsp;</p>
 
-	<div id="accordion">
+	<div id="accordion_inactive">
 	
 		<% unless @costumes.empty? %>
 		<h6><%= link_to(image_tag("forms/search_costumes.png"),"#") %></h6>
