Browse is ajaxified

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -13,9 +13,13 @@
 				<td wdith="160" valign="top">
 					<%= render :partial => "partials/display_subcategories", :locals => {:subcategories  => @subcat_costumes} %>
 				</td>
-				<td width="400" valign="top" id="costume_items">
-					<%= render :partial => "partials/display_items_table", :locals => {:items  => @costumes} %>
-					<%= paginate @costumes %>
+				<td width="400" valign="top">
+					<div id="costume_items">
+						<%= render :partial => "partials/display_items_table", :locals => {:items  => @costumes} %>
+					</div>
+					<div id="paginate_costumes">
+					  <%= paginate @costumes, :remote => true %>
+					</div>
 				</td>
 			<tr></table>
 		</div>
@@ -27,8 +31,12 @@
 					<%= render :partial => "partials/display_subcategories", :locals => {:subcategories  => @subcat_props} %>
 				</td>
 				<td width="400" valign="top" id="prop_items">
-					<%= render :partial => "partials/display_items_table", :locals => {:items  => @props} %>
-					<%= paginate @props %>
+					<div id="prop_items">
+						<%= render :partial => "partials/display_items_table", :locals => {:items  => @props} %>
+					</div>
+					<div id="paginate_props">
+					  <%= paginate @props, :remote => true %>
+					</div>
 				</td>
 			<tr></table>
 		</div>
@@ -40,8 +48,12 @@
 					<%= render :partial => "partials/display_subcategories", :locals => {:subcategories  => @subcat_staging} %>
 				</td>
 				<td width="400" valign="top" id="staging_items">
-					<%= render :partial => "partials/display_items_table", :locals => {:items  => @staging} %>
-					<%= paginate @staging %>
+					<div id="staging_items">
+						<%= render :partial => "partials/display_items_table", :locals => {:items  => @staging} %>
+					</div>
+					<div id="paginate_staging">
+					  <%= paginate @staging, :remote => true %>
+					</div>
 				</td>
 			<tr></table>
 		</div>
