--- a/app/views/partials/_display_subcategories.html.erb
+++ b/app/views/partials/_display_subcategories.html.erb
@@ -1,5 +1,5 @@
 <% for subcategory in subcategories %>
-	<p><%= link_to "#{subcategory[1]}", browse_subcategories_path(subcategory[0]) %></p>
+	<p><%= link_to "#{subcategory[1]}", browse_subcategories_path(subcategory[0]), :remote => true %></p>
 <% end %>
 
 
