--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,3 @@
-
 <p>
   <b>Name:</b>
   <%= @category.name %>
@@ -6,7 +5,7 @@
 
 <p>
   <b>Subcategory of:</b>
-  <%= @category.subcategory_of %>
+  <%= @category.parent_category %>
 </p>
 
 <p>
