--- a/app/views/home/_sign_in_or_register.html.erb
+++ b/app/views/home/_sign_in_or_register.html.erb
@@ -1,6 +1,6 @@
 <p class="supertiny">&nbsp;</p>
 <h2>Want Access? Sign Up</h2>
-<p>The UIF Thalia system is open to UIF and its partner 
+<p>The UIF Performing Arts Inventory System is open to UIF and its partner 
 	organizations.  If you would like access to this system, just  
 	<%= link_to "click here to request an account", new_user_registration_path %>.</p>
 
