--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,7 +4,7 @@
 
 <table border="0">
 	<tr><td width="600" valign="top">
-	<h1>Browse Catalog</h1>
+	<h1>Browse Inventory</h1>
 	<div id="accordion">
 	
 		<h6><%= link_to(image_tag("forms/search_costumes.png"),"#") %></h6>
