--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -2,4 +2,7 @@
 
 <%= render 'form' %>
 
-Back to <%= link_to 'list of all categories', categories_path %>
+<br/>
+
+<%= image_tag "forms/items_actions.png" %><br/>
+<%= link_to(image_tag("icons/back_arrow.png", :border => 0), categories_path)  %>&nbsp;<%= link_to "Back to Categories", categories_path %>
