--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New category</h1>
+<h1>New Category</h1>
 
 <%= render 'form' %>
 
-Back to <%= link_to 'list of all categories', categories_path %>
+<br/>
+
+<%= image_tag "forms/items_actions.png" %><br/>
+<%= link_to(image_tag("icons/back_arrow.png", :border => 0), categories_path)  %>&nbsp;<%= link_to "Back to Categories", categories_path %>
