--- a/app/views/colors/index.html.erb
+++ b/app/views/colors/index.html.erb
@@ -2,7 +2,7 @@
 	<div id="add_widget"><%= link_to '+ Add a New Color', new_color_path %></div>
 <% end %>
 
-<h1>Listing colors</h1>
+<h1>Colors</h1>
 
 <table class="datagrid">
   <thead class="datagrid">
