--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-Back to <%= link_to 'list of all items', locations_path %>
+<br/>
+<%= image_tag "forms/items_actions.png" %><br/>
+<%= link_to(image_tag("icons/back_arrow.png", :border => 0), locations_path(@user))  %>&nbsp;<%= link_to "Back to Locations", locations_path(@user) %>
