--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -19,9 +19,13 @@
 </p>
 
 
+<br/>
 <% unless current_user.is_partner? %>
+
+	<p><%= image_tag "forms/items_actions.png" %></p>
 	<p><%= link_to(image_tag("icons/edit_dg.gif", :border => 0), edit_location_path(@location))  %>&nbsp;<%= link_to 'Edit this location', edit_location_path(@location) %> &nbsp;|&nbsp;
-		<%= link_to(image_tag("icons/delete_dg.gif", :border => 0), location_path(@location), :confirm => 'Are you sure you wish to delete this location?', :method => :delete) %>&nbsp;<%= link_to 'Delete this location', location_path(@location), :confirm => 'Are you sure you wish to delete this location?', :method => :delete %>
+		 <%= link_to(image_tag("icons/delete_dg.gif", :border => 0), location_path(@location), :confirm => 'Are you sure you wish to delete this location?', :method => :delete) %>&nbsp;<%= link_to 'Delete this location', location_path(@location), :confirm => 'Are you sure you wish to delete this location?', :method => :delete %> &nbsp;|&nbsp;
+	   <%= link_to(image_tag("icons/back_arrow.png", :border => 0), locations_path(@location))  %>&nbsp;<%= link_to "Back to Locations", locations_path(@location) %>
 	</p>
+	
 <% end %>
-Back to <%= link_to 'list of all locations', locations_path %>
