--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New organization</h1>
+<h1>New Organization</h1>
 
 <%= render 'form' %>
 
-Back to <%= link_to 'list of all organizations', organizations_path %>
+<br/>
+<%= image_tag "forms/items_actions.png" %><br/>
+<%= link_to(image_tag("icons/back_arrow.png", :border => 0), organizations_path(@organizations))  %>&nbsp;<%= link_to "Back to Organizations", organizations_path(@organizations) %>
